--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     padding: 2rem 9%;
     background:var(--bg-color);
     display: flex;
@@ -68,16 +68,25 @@ body{
 .navbar li {
     margin-left: 20px;
 }
-.navbar li a:hover, .navbar a.active {
-    color: #fff;
-   /* background: linear-gradient(to right, #4413dc, #d02dab); */
-    background-color: rgb(237, 28, 226);
+.navbar  li a:hover {
+color: rgb(237, 28, 226); ;
 }
-#menu-icon{
+.navbar li a.active{
+    background-color: rgb(237, 28, 226) !important; 
+}
+.navbar li a:hover.active{
+    background-color: rgb(237, 28, 226) !important; 
+    color: white;
+}
+
+
+#menu-icon {
     font-size: 3.6rem;
-    color:var(--text-color);
+    color: var(--text-color);
     display: none;
     cursor: pointer;
+    position: relative;
+    right: 0px;
 }
 
 
@@ -529,8 +538,8 @@ span{
     padding: 2rem 9%;
     background: #272c35;
 }
-.footer-text p{
-    font-size: 1.6rem;
+.footer-text p {
+    font-size: 12px;
 }
 .footer-iconTop a {
     display: inline-flex;
@@ -608,8 +617,8 @@ span{
     .header{
         padding: 2rem 3%;
     }
-    section{
-        padding: 10rem 3% 2rem;
+    section {
+        padding: 5rem 3% 2rem;
     }
     .services{
         padding-bottom: 7rem;
@@ -646,21 +655,32 @@ span{
     .navbar.active{
         display: block;
     }
+    .navbar li {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
 
-    .navbar a{
+    .navbar li a{
         display: block;
         font-size: 2rem;
         margin:3rem 0 ;
     } 
+    .navbar li a:hover{
+        color: rgb(156, 9, 9);
+    }
     
     .home{
         flex-direction:column ;
     }
     .home .home-content h3{
-        font-size: 2.6rem;
+        font-size: 2.4rem;
+        color: rgb(240 18 233);
+        margin-top: 23px;
     }
     .home .home-content h1{
         font-size: 5rem;
+        display: none;
     }
     .home .home-img{
         margin-top: 7rem;
@@ -676,7 +696,7 @@ span{
         text-align: justify;
     }
     .about-sec .front-sec:before {
-        left: 18%;
+        display: none;
     }
 
     .about{
@@ -690,15 +710,47 @@ span{
     .services h2{
         margin-bottom: 3rem;
     }
+    
 
     .skills-container{
         display: block;
+    }
+    .experience .title-section {
+        margin-top: -40px;
+        position: relative;
+        right: 4px;
     }
     .portfolio h2{
         margin-bottom: 3rem;
     }
     .portfolio-container{
         grid-template-columns: repeat(2,1fr);
+    }
+    .blog-tab .title-section{
+        margin-top: 117px;
+    }
+    .blog-tab .row .card {
+        width: 34rem !important;
+    }
+    .contact-tab .title-section {
+        margin-top: 81px;
+    }
+    .contact-tab .title-bg {
+        position: absolute;
+        padding: 0px;
+        font-size: 68px;
+        top: 79px;
+        left: 0px;
+    
+    }
+    .contact-tab {
+        padding: 27px;
+    }
+    .contact-tab .title-section .h1{
+        margin-top: 20px;
+    }
+    .portfolio .heading {
+        font-size: 30px;
     }
 
 }
@@ -813,18 +865,27 @@ span{
         margin: 20px;
         padding: 0px;
     }
-.contact-tab .title-bg {
+    .contact-tab .title-bg {
         position: absolute;
         padding: 0px;
-        font-size: 91px;
-        top: 70px;
+        font-size: 75px;
+        top: 61px;
         left: 0px;
         text-align: center;
         right: 0px;
         color: hsla(0, 0%, 100%, .07);
         text-transform: uppercase;
         font-weight: bold;
+        /* bottom: -21px; */
     }
+.contact-tab .title-section {
+        padding: 0px;
+        margin-top: 81px;
+}
+.contact-tab .title-section .heading{
+    margin-top: 20px;
+}  
+    
 .blog-tab .title-bg {
         position: absolute;
         padding: 0px;
@@ -846,12 +907,26 @@ span{
 
 .blog-tab .container{
     width: 100%;
-    padding: 50px;
     margin-top: 50px;
 }
-.blog-tab .row .card{
+.blog-tab .row .card {
     width: 38rem !important;
 }
+
+.blog-tab .card .card-body .card-text {
+    text-align: start;
+    font-size: 20px;
+    margin: 0px;
+    padding: 10px 0px;
+    color: #343a40;
+    font-family: system-ui;
+}
+.blog-tab .card .card-img-top {
+    width: 100%;
+    object-fit: cover;
+    height: 157px;
+}
+
 
 .blog-tab .row .card .card-body .btn {
     display: inline-block;
@@ -876,8 +951,6 @@ span{
 }
 .about-sec {
     padding: 8rem 9% 3rem;
-    display: flex
-;
     justify-content: center;
     align-items: center;
     gap: 2rem;
@@ -955,7 +1028,6 @@ span{
     color: fuchsia;
     font-weight: 600;
     padding: 18px;
-    margin-top: 40px;
 }
 
 /*.experience .title-section h1:before {
@@ -988,8 +1060,8 @@ span{
 }
 
 .experience .experience-box {
-    background-color: #292828;
-    /* margin: 17px; */
+    background-color: #000000;
+    margin: 17px;
     border-radius: 7px 7px 7px 7px;
     padding: 23px 13px 0px 14px;
 }
